Método Eliminar ABMVehiculos

--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -1010,3 +1010,16 @@
     left: 396px;
     top: 22px;
 }
+
+.tblVehiculos-style {
+/*    display: initial;*/
+    width: 30%;
+    border: solid;
+    border-color: black;
+    background-color: rgb(255 255 255);
+}
+
+/*.tblVehiculos-style.invisible{
+    display: none;
+}*/
+
