Finalizada FUNCIONALIDAD de ABMVehiculos

--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -1012,12 +1012,19 @@
 }
 
 .tblVehiculos-style {
-/*    display: initial;*/
+    /*display: none;*/
     width: 30%;
     border: solid;
     border-color: black;
     background-color: rgb(255 255 255);
 }
+
+/*.tblVehiculos-style-2 {
+    width: 30%;
+    border: solid;
+    border-color: black;
+    background-color: rgb(255 255 255);
+}*/
 
 /*.tblVehiculos-style.invisible{
     display: none;
