--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -1084,3 +1084,48 @@
     display: none;
 }*/
 
+.div-mail {
+    margin-inline: 20%;
+    text-align: justify;
+    font-family: sans-serif;
+    box-shadow: 0px 0px 10px 0px #000000;
+    border-radius: 15px;
+    background-color: #8E8E8E;
+}
+
+.img-fondo-mail {
+    position: relative;
+    width: 100%;
+    border-radius: 15px;
+}
+
+.info-mail {
+    padding: 1%;
+    position: absolute;
+    top: 58px;
+    width: 53.5%;
+    background-color: #FFFFFF80;
+    margin: 2%;
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px 0px #b1b4bb;
+}
+
+.btn-mail {
+    border: 2px solid #0F1F77;
+    padding: 7px 9px 7px 9px;
+    font-family: emoji;
+    font-weight: 600;
+    border-radius: 30px;
+    font-size: 20px;
+    box-shadow: 0px 0px 10px 0px #000000;
+    background-color: #2C49E3;
+    color: #FFFFFF;
+    text-shadow: 1px 1px 2px black;
+    cursor: pointer;
+}
+
+.btn-mail:hover {
+    background-color: #FFFFFF;
+    color: #2C49E3;
+    transition-duration: 500ms;
+}
