--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -1107,6 +1107,27 @@
     left: 0px;
 }
 
+.btn-ver-todos-usuarios {
+    vertical-align: middle;
+    color: #ffffff;
+    background-color: #000000;
+    border-radius: 50px;
+    border: solid 1px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    padding-inline: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: 600;
+    text-shadow: black 0.1em 0.1em 1.9em;
+    box-shadow: 0 4px 6px -6px black;
+}
+
+.btn-ver-todos-usuarios:hover {
+    color: #000000;
+    background-color: #ffffff;
+}
+
 .tblVehiculos-style {
     /*display: none;*/
     width: 30%;
